[gd_scene load_steps=5 format=3 uid="uid://bbf1sa8l70ygh"]

[ext_resource type="Script" path="res://Scripts/Gimmicks/Fan.gd" id="1_5mjmq"]
[ext_resource type="Texture2D" uid="uid://dic8lihkjwmua" path="res://Graphics/Gimmicks/SmallTurbines.png" id="2_dd5q0"]
[ext_resource type="AudioStream" uid="uid://bbng42jqn5isl" path="res://Audio/SFX/Gimmicks/SmallFan.wav" id="3_206io"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_se3l2"]
resource_local_to_scene = true
size = Vector2(32, 16)

[node name="Fan" type="Area2D"]
collision_layer = 0
collision_mask = 4096
script = ExtResource("1_5mjmq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_se3l2")
debug_color = Color(0.666667, 0, 1, 0.501961)

[node name="fan" type="Sprite2D" parent="."]
texture = ExtResource("2_dd5q0")
offset = Vector2(0, 4)
vframes = 5
frame = 2
region_enabled = true
region_rect = Rect2(0, 0, 32, 120)

[node name="FanSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_206io")
volume_db = 5.0
max_distance = 500.0
attenuation = 0.2
bus = &"SFX"

[node name="BubbleTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="BubbleTimer" to="." method="_on_bubble_timer_timeout"]
